--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 								<h3>Заказать звонок!!</h3>
 								<form>
 									<label for="name">Введите имя:</label>
-									<input type="text" class="name">
+									<input type="text" id="name" required>
 									<label for="tel">Введите номер телефона:</label>
-									<input class="tel" type="tel" name="number">
+									<input id="tel" type="tel" name="number" required>
 									<button class="popup_tel_form_button">Заказать звонок</button>
 								</form>
 						</div>
@@ -26,14 +26,14 @@
 						<div id="popup_container_email"> 
 							<div class="popup_email_form">
 								<a class="close" href="#" type="button">&times;</a>
-								<h3>Заказать звонок!!</h3>
+								<h3>Контактная информация:</h3>
 								<form>
 									<label for="name">Введите имя:</label>
-									<input class="name" type="text" class="name">
+									<input id="name" type="text" class="name" required>
 									<label for="tel">Введите номер телефона:</label>
-									<input class="tel" type="tel" name="number">
+									<input id="tel" type="tel" name="number" required>
 									<label for="mail">Введите адрес электронной почты:</label>
-									<input class="mail"	type="email">
+									<input id="mail" type="email" required>
 									<button class="popup_email_form_button" type="button">Заказать звонок</button>
 								</form>
 							</div>
@@ -43,12 +43,12 @@
 					<nav class="header_left-column">
 						<a href="#whatido">Услуги</a>
 						<a href="#mywork" style="text-decoration: underline; color:#fbb8c5;">Портфолио</a>
-						<a href="#font">Стоймость</a>
+						<a href="#font">Стоимость</a>
 					</nav>
 					<button id="header_left-column_block">&#9776;</button>
 						
 					<div class="header_right-column">
-						<div class="header_right-column_tel"><a href="tel:7(499)995-55-77">Повзвоните нам!!</a></div>
+						<div class="header_right-column_tel"><a href="tel:7(499)995-55-77">Позвоните нам!!</a></div>
 						<button class="header_right-column_tel_buttom">Заказать звонок</button>
 					</div>
 					<button class="header_tel_button header_right-column_tel_buttom"><img src="img/call-answer.png" alt="call_button"></button>
@@ -131,7 +131,7 @@
 					</div>
 					<div class="font_text"> 
 						<h4>Адаптивная верстка под все устройства и браузеры от 1000 рублей всего за 4 часа.*</h4>
-						<p>* Сроки и стоймостьмогут отличаться от завленных и рассчиваються индивидуально, в зависимои от сложности задач.</p>
+						<p>* Сроки и стоимость могут отличаться от завленных и рассчитываються индивидуально, в зависимости от сложности задач.</p>
 					</div>
 				</section>
 					<footer>
@@ -151,7 +151,7 @@
 								</div>
 								<div>
 									<a href="https://vk.com/" class="soc-button vk"> </a>
-									<a href="www.facebook.com/‎" class="soc-button fb"> </a>
+									<a href="www.facebook.com/" class="soc-button fb"> </a>
 									<a href="https://twitter.com/?lang=ru" class="soc-button tw"> </a>
 									<a href="https://www.instagram.com/?hl=ru" class="soc-button in"> </a>
 								</div>
