--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 								<a class="close" href="#">&times;</a>
 								<h3>Заказать звонок!!</h3>
 								<form id="tel_form">
-									<label for="name">Введите имя:</label>
-									<input type="text" id="name" required>
-									<label for="tel">Введите номер телефона:</label>
-									<input id="tel" type="tel" name="number" required>
+									<label for="form_tel_name">Введите имя:</label>
+									<input type="text" id="form_tel_name" required>
+									<label for="form_tel">Введите номер телефона:</label>
+									<input id="form_tel" type="tel" name="number" required>
 									<button class="popup_tel_form_button" type="button" onclick="validateForm('#popup_container_tel','#tel_form')">Заказать звонок</button>
 								</form>
 						</div>
