--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="body">
 					<div id="popup_container_tel"> 
 						<div class="popup_tel_form">
-								<a class="close" href="#">&times;</a>
+								<button class="close" >&times;</button>
 								<h3>Заказать звонок!!</h3>
 								<form id="tel_form">
 									<label for="form_tel_name">Введите имя:</label>
@@ -25,7 +25,7 @@
 					</div>
 						<div id="popup_container_email"> 
 							<div class="popup_email_form">
-								<a class="close" href="#" type="button">&times;</a>
+								<button class="close" type="button">&times;</button>
 								<h3>Контактная информация:</h3>
 								<form id="email_form">
 									<label for="form_email_name">Введите имя:</label>
@@ -57,10 +57,10 @@
 			<section id="name_bg">
 				<div class="bg">
 					<div class="bg_symbol">
-						<div class="bg_symbol_item1">< div ></div>
+						<div class="bg_symbol_item1">&lt;div&gt;</div>
 						<div class="bg_symbol_item2">#</div>
-						<div class="bg_symbol_item3"> < / > </div>
-						<div class="bg_symbol_item4">< div ></div>
+						<div class="bg_symbol_item3"> &lt;/&gt; </div>
+						<div class="bg_symbol_item4">&lt;div&gt;</div>
 						<div class="bg_symbol_item5">{ }</div>
 					</div>
 				</div>
@@ -125,8 +125,8 @@
 					<div class="font_symbol">
 						<div class="font_symbol_item1">{ }</div>
 						<div class="font_symbol_item2">#</div>
-						<div class="font_symbol_item3"> < / > </div>
-						<div class="font_symbol_item4">< div ></div>
+						<div class="font_symbol_item3"> &lt;/&gt; </div>
+						<div class="font_symbol_item4">&lt;div &gt;</div>
 						<div class="font_symbol_item5">{ }</div>
 					</div>
 					<div class="font_text"> 
@@ -160,11 +160,11 @@
 					</footer>
 
 						<small>
-								&copy Волк Григорий, 2019
+								&copy; SreatorStudio, 2019
 						</small>
 		</div>
-		<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
-		<script type="text/javascript" src="slick.min.js"></script>
-		<script type="text/javascript" src="script.js"></script>
+		<script src="jquery-3.4.1.min.js"></script>
+		<script src="slick.min.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
